Fix graph view overflow issue

--- a/dash/src/index.css
+++ b/dash/src/index.css
@@ -39,3 +39,4 @@ input { font-size: inherit; outline: none; }
 .remove { background-image: url('assets/icons/remove.svg'); }
 .expand-less { background-image: url('assets/icons/expand_less.svg'); }
 .expand-more { background-image: url('assets/icons/expand_more.svg'); }
+.multiple-checkbox { overflow-y: scroll; }
